--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('images.jpeg') no-repeat center center fixed;
+    background: url('/XMAXCMCIS.github.io/images.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 
