--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@ a {
 	transition: color 0.3s ease;
 }
 
+	  body {
+background-image: url(“https://XMAXCMCIS.github.io/assets/");
+	  }
+
 a:hover {
 	color: white;
 }
