--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('/images/images.jpeg') no-repeat center center fixed;
+    background: url('https://github.com/XMAXCMCIS/XMAXCMCIS.github.io/blob/main/images.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -159,16 +159,6 @@ a {
 	transition: color 0.3s ease;
 }
 
-	  body {
-background-image: url(“https://XMAXCMCIS.github.io/assets/");
-	  }
-
-a:hover {
-	color: white;
-}
-a:hover {
-	background-color: black;
-}
 
   </style>
 </body>
