--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
   <!-- HTML -->
   <div class="center">
-  <a href="/html/updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a>
+  <a href="updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a>
 </div>
 <!DOCTYPE html>
 <html lang="ko">
@@ -42,25 +42,25 @@
 	<u>and github dev.</u></p>
 <hr>
 <h1>ÕAtext</p>
-	<a href="https://oadeven.github.io/oatext.com/index.html">
+	<a href="https://xmaxcmcis.github.io/oatext.com/index.html">
 		<button class="btn btn-dark">
 			website
 </button>
 </a> 
 <br>
 <br>
-<h1>ÕAshadder</h1>
-<p>shell editor no auto complete functions</p>
+<h1>ÕAcdfiles</h1>
+<p>File Directory</p>
 <a href="">
 	<button class="btn btn-dark disabled">
-		download app
+		github
 	</button>
 </a>
 <br>
 <br>
 <br>
-<h1>ÕAesytb</h1>
-<p>YouTube more functions</p>
+<h1>ÕAwiki</h1>
+<p>wiki</p>
 <a href="">
 	<button class="btn btn-dark disabled">
 		download app
@@ -82,7 +82,7 @@
 <p>©️2024 XMAXCMCIS | XMAXCMCIS.Inc(Not a company) | ver:XMCMCSV2
 <br>
 <br>
-<a href="https://github.com/OAdeven">github</a> | <a href="">XMAX youtube ch</a>
+<a href="https://github.com/xmaxcmcis">github</a> | <a href="">XMAX youtube ch</a>
 <br>
 
 <br>
@@ -98,6 +98,8 @@
 
 </div>
 </div>
+<br>
+<h6>There may be features that have not been added yet.</h6>
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
