--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('images.jpeg') no-repeat center center fixed;
+    background: url('background.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 
