--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('Screenshot_20240619_232844_TermuxX11.jpg') no-repeat center center fixed;
+    background: url('https://github.com/xmaxcmcis/XMAXCMCISgithub.io/blob/main/images/Screenshot_20240619_232844_TermuxX11.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
