--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('https://github.com/xmaxcmcis/XMAXCMCISgithub.io/blob/main/images/codm_2024-08-11_12_14_04.jpg') no-repeat center center fixed;
+    background: url('https://github.com/xmaxcmcis/XMAXCMCISgithub.io/blob/main/images/20240627_165327.heic') no-repeat center center fixed;
     background-size: cover;
 }
 
