--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
   <!-- HTML -->
   <div class="center">
-  <a href="updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a>
+  <a href="/html/updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a> | <a href="about.html">about</a>
 </div>
 <!DOCTYPE html>
 <html lang="ko">
@@ -29,6 +29,7 @@
         <div class="overlay"></div>
         <div class="content">
             <h1>XMAXCMCIS™
+            
         </div>
     </div>
 </body>
@@ -42,18 +43,18 @@
 	<u>and github dev.</u></p>
 <hr>
 <h1>ÕAtext</p>
-	<a href="https://xmaxcmcis.github.io/oatext.com/index.html">
+	<a href="https://oadeven.github.io/oatext.com/index.html">
 		<button class="btn btn-dark">
 			website
 </button>
 </a> 
 <br>
 <br>
-<h1>ÕAcdfiles</h1>
-<p>File Directory</p>
+<h1>cdfiles</h1>
+<p>Files Directory</p>
 <a href="">
 	<button class="btn btn-dark disabled">
-		github
+		download app
 	</button>
 </a>
 <br>
@@ -82,10 +83,16 @@
 <p>©️2024 XMAXCMCIS | XMAXCMCIS.Inc(Not a company) | ver:XMCMCSV2
 <br>
 <br>
-<a href="https://github.com/xmaxcmcis">github</a> | <a href="">XMAX youtube ch</a>
-<br>
 
+<a href="https://github.com/xmaxcmcis">github</a> | <a href="">XMAXCMCIS youtube ch</a>
 <br>
+<br>
+<br>
+<div align="center">
+  <a href="https://github.com/xmaxcmcis">
+    <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="GitHub Stats" />
+  </a>
+</div>
 <div id="google_translate_element"></div>
     <script type="text/javascript">
         function googleTranslateElementInit() {
@@ -98,8 +105,7 @@
 
 </div>
 </div>
-<br>
-<h6>There may be features that have not been added yet.</h6>
+
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -122,7 +128,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('https://github.com/xmaxcmcis/XMAXCMCISgithub.io/blob/main/images/20240627_165327.heic') no-repeat center center fixed;
+    background: url('/img/images.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -145,22 +151,31 @@
     text-align: center;
     color: #;
 }
+
 .logo {
     width: 150px;
     height: auto;
     margin-bottom: 20px;
 }
+
 a {
 	text-decoration: none;
 	color: black;
 	transition: background-color 0.3s ease;
 }
+
 a {
 	text-decoration: none;
 	color: black;
 	transition: color 0.3s ease;
 }
 
+a:hover {
+	color: white;
+}
+a:hover {
+	background-color: black;
+}
 
   </style>
 </body>
