--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <br>
 <h3>Testing phone or tablet</h3>
 <p>use tablet.</p>
-<a href="/img/testphone.jpg">view</a>
+<a href="https://github.com/xmaxcmcis/XMAXCMCMIS.github.io/testphone.jpg">view</a>
 <p>I use my phone, but I also use my tablet when I'm testing or watching something. </p>
 <p>Brands:Dicle tab Biz 10.1(Google Android)</p>
 <p>my test tablets(website.video.etc)</p>
@@ -28,7 +28,7 @@
 <p>my main phones</p>
 <hr>
 <h3>my home</h3>
-<a href="/img/home.jpg">view</a>
+<a href="https://github.com/xmaxcmcis/XMAXCMCMIS.github.io/home.jpg">view</a>
 <p>I have been living here since I was born. It is still going well. However, there are a lot of bugs and cockroaches. And there are a lot of mosquitoes because there is a mountain in front of the house. 
 <p>It's still here. </p>
 <hr>
