--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <br>
 <h3>Testing phone or tablet</h3>
 <p>use tablet.</p>
-<a href="https://github.com/xmaxcmcis/XMAXCMCMIS.github.io/testphone.jpg">view</a>
+<a href="xmaxcmcis/XMAXCMCMIS.github.io/testphone.jpg">view</a>
 <p>I use my phone, but I also use my tablet when I'm testing or watching something. </p>
 <p>Brands:Dicle tab Biz 10.1(Google Android)</p>
 <p>my test tablets(website.video.etc)</p>
