--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('/img/images.jpeg') no-repeat center center fixed;
+    background: url('https://github.com/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaes/images.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 
