--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
   <!-- HTML -->
   <div class="center">
-  <a href="/html/updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a> | <a href="about.html">about</a>
+  <a href="updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a> | <a href="about.html">about</a>
 </div>
 <!DOCTYPE html>
 <html lang="ko">
@@ -43,7 +43,7 @@
 	<u>and github dev.</u></p>
 <hr>
 <h1>ÕAtext</p>
-	<a href="https://oadeven.github.io/oatext.com/index.html">
+	<a href="https://xmaxcmcis.github.io/oatext.com/index.html">
 		<button class="btn btn-dark">
 			website
 </button>
