--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <br>
 <div align="center">
   <a href="https://github.com/xmaxcmcis">
-    <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="GitHub Stats" />
+    <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="XMAXCMCIS stats" />
   </a>
 </div>
 <div id="google_translate_element"></div>
