--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ a:hover {
 </body>
 </html>
 <head>
-    <link rel="icon" href="https://github.com/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaes/" type="image/x-icon">
+    <link rel="icon" href="https://github.com/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaes/export202408131543502178.png" type="image/x-icon">
     <!-- PNG 또는 SVG 파일을 사용하는 경우 -->
     <!-- <link rel="icon" href="/path/to/your/favicon.png" type="image/png"> -->
     <!-- <link rel="icon" href="/path/to/your/favicon.svg" type="image/svg+xml"> -->
