--- a/index.html
+++ b/index.html
@@ -173,11 +173,19 @@ a:hover {
 }
 
   </style>
-</body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="icon" href="https://github.com/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaes/export202408131543502178.png" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- 파비콘 추가 -->
+    <link rel="icon" href="https://github.com/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaesexport202408131543502178.png" type="image/x-icon">
     <!-- PNG 또는 SVG 파일을 사용하는 경우 -->
     <!-- <link rel="icon" href="/path/to/your/favicon.png" type="image/png"> -->
     <!-- <link rel="icon" href="/path/to/your/favicon.svg" type="image/svg+xml"> -->
 </head>
+<body>
+    <!-- 본문 내용 -->
+</body>
+</html>
