--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ a:hover {
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- 파비콘 추가 -->
-    <link rel="icon" href="https://github.com/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaesexport202408131543502178.png" type="image/x-icon">
+    <link rel="icon" href="/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaesexport202408131543502178.png" type="image/png">
     <!-- PNG 또는 SVG 파일을 사용하는 경우 -->
     <!-- <link rel="icon" href="/path/to/your/favicon.png" type="image/png"> -->
     <!-- <link rel="icon" href="/path/to/your/favicon.svg" type="image/svg+xml"> -->
