--- a/index.html
+++ b/index.html
@@ -173,19 +173,10 @@ a:hover {
 }
 
   </style>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- 파비콘 추가 -->
-    <link rel="icon" href="/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaesexport202408131543502178.png" type="image/png">
-    <!-- PNG 또는 SVG 파일을 사용하는 경우 -->
-    <!-- <link rel="icon" href="/path/to/your/favicon.png" type="image/png"> -->
-    <!-- <link rel="icon" href="/path/to/your/favicon.svg" type="image/svg+xml"> -->
-</head>
-<body>
-    <!-- 본문 내용 -->
-</body>
-</html>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ff0000">
