--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ a:hover {
 
   </style>
 
-	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/icon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png">
@@ -187,7 +187,7 @@ a:hover {
 <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/icon/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
