--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>XMAXCMCIS</title>
-  
+      <link rel="icon" href="/img/android-icon-144x144.png" type="image/x-icon">
+      <!-- 또는 PNG 포맷 사용 -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -42,8 +43,9 @@
 	<p>I am a developer and create shells and websites.
 	<u>and github dev.</u></p>
 <hr>
-<h1>ÕAtext</p>
-	<a href="https://xmaxcmcis.github.io/oatext.com/index.html">
+<h1>ÕAtext</h1>
+<p>(Support will end soon)</p>
+	<a href="https://.xmaxcmcis.io/oatext.com/index.html">
 		<button class="btn btn-dark">
 			website
 </button>
@@ -77,17 +79,25 @@
 	</button>
 </a>
 <br>
+<hr>
+<div align="center">
+  <a href="https://github.com/xmaxcmcis">
+    <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="XMAXCMCIS github" />
+  </a>
+</div>
+<br>
 <br>
 
 <hr>
 <p>©️2024 XMAXCMCIS | XMAXCMCIS.Inc(Not a company) | ver:XMCMCSV2
 <br>
-<a href="https://github.com/xmaxcmcis">github</a> | <a href="">XMAXCMCIS youtube ch</a>
-<div align="center">
-  <a href="https://github.com/xmaxcmcis">
-    <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="XMAXCMCIS stats" />
-  </a>
-</div>
+<br>
+
+<a href="https://github.com/xmaxcmcis">github</a> | <a href="https://www.youtube.com/@XMAXCMCIS">XMAXCMCIS channel</a>
+<br>
+<br>
+<br>
+
 <div id="google_translate_element"></div>
     <script type="text/javascript">
         function googleTranslateElementInit() {
@@ -173,21 +183,6 @@ a:hover {
 }
 
   </style>
+</body>
+</html>
 
-<link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/icon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/icon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/icon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/icon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/icon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/icon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/icon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/icon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/icon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/icon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/icon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/icon/favicon-16x16.png">
-<link rel="manifest" href="assets/favicon/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
