--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>XMAXCMCIS</title>
-      <link rel="icon" href="/img/android-icon-144x144.png" type="image/x-icon">
+      <link rel="icon" href="https://github.com/xmaxcmcis/XMAXCMCIS.github.io/blob/main/imgaes/android-icon-144x144.png" type="image/x-icon">
       <!-- 또는 PNG 포맷 사용 -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    
@@ -133,7 +133,7 @@
 .welcome-page {
     position: relative;
     height: 100%;
-    background: url('https://github.com/xmaxcmcis/XMAXCMXIS.github.io/blob/main/imgaes/images.jpeg') no-repeat center center fixed;
+    background: url('https://github.com/xmaxcmcis/XMAXCMCIS.github.io/blob/main/imgaes/images.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 
