--- a/index.html
+++ b/index.html
@@ -4,184 +4,72 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>XMAXCMCIS</title>
-      <link rel="icon" href="https://raw.githubusercontent.com/xmaxcmcis/XMAXCMCIS.github.io/main/imgaes/android-icon-144x144.png" type="image/png">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   
-  <!-- HTML -->
-  <div class="center">
-  <a href="updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a> | <a href="about.html">about</a>
-</div>
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>환영 페이지</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <!-- 파비콘 링크 -->
+  <link rel="icon" href="https://raw.githubusercontent.com/xmaxcmcis/XMAXCMCIS.github.io/main/images/android-icon-144x144.png" type="image/png">
+  <!-- CSS 및 기타 링크 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="welcome-page">
-        <div class="overlay"></div>
-        <div class="content">
-            <h1>XMAXCMCIS™
-            
-        </div>
+  <!-- 내용 -->
+  <div class="center">
+    <a href="updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a> | <a href="about.html">about</a>
+  </div>
+
+  <hr>
+  <div class="center">
+    <h1>who you?</h1>
+    <p>I am a developer and create shells and websites. <u>and github dev.</u></p>
+    <hr>
+    <h1>ÕAtext</h1>
+    <p>(Support will end soon)</p>
+    <a href="https://xmaxcmcis.io/oatext.com/index.html">
+      <button class="btn btn-dark">website</button>
+    </a>
+    <br><br>
+    <h1>cdfiles</h1>
+    <p>Files Directory</p>
+    <a href="">
+      <button class="btn btn-dark disabled">download app</button>
+    </a>
+    <br><br><br>
+    <h1>ÕAwiki</h1>
+    <p>wiki</p>
+    <a href="">
+      <button class="btn btn-dark disabled">download app</button>
+    </a>
+    <br><br>
+    <h1>tercall</h1>
+    <p>Making a call based on termux API</p>
+    <a href="https://github.com/XMAXCMCIS/tercall-termux">
+      <button class="btn btn-dark">github</button>
+    </a>
+    <br>
+    <hr>
+    <div align="center">
+      <a href="https://github.com/xmaxcmcis">
+        <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="XMAXCMCIS github" />
+      </a>
     </div>
-</body>
-</html>
-</body>
-</html>
-<hr>
-<div class="center">
-	<h1>who you?</h1>
-	<p>I am a developer and create shells and websites.
-	<u>and github dev.</u></p>
-<hr>
-<h1>ÕAtext</h1>
-<p>(Support will end soon)</p>
-	<a href="https://.xmaxcmcis.io/oatext.com/index.html">
-		<button class="btn btn-dark">
-			website
-</button>
-</a> 
-<br>
-<br>
-<h1>cdfiles</h1>
-<p>Files Directory</p>
-<a href="">
-	<button class="btn btn-dark disabled">
-		download app
-	</button>
-</a>
-<br>
-<br>
-<br>
-<h1>ÕAwiki</h1>
-<p>wiki</p>
-<a href="">
-	<button class="btn btn-dark disabled">
-		download app
-	</button>
-</a>
-<br>
-<br>
-<h1>tercall</h1>
-<p>Making a call based on termux API</p>
-<a href="https://github.com/XMAXCMCIS/tercall-termux">
-	<button class="btn btn-dark">
-		github
-	</button>
-</a>
-<br>
-<hr>
-<div align="center">
-  <a href="https://github.com/xmaxcmcis">
-    <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="XMAXCMCIS github" />
-  </a>
-</div>
-<br>
-<br>
+    <br><br>
+    <hr>
+    <p>©️2024 XMAXCMCIS | XMAXCMCIS.Inc(Not a company) | ver:XMCMCSV2</p>
+    <br>
+    <a href="https://github.com/xmaxcmcis">github</a> | <a href="https://www.youtube.com/@XMAXCMCIS">XMAXCMCIS channel</a>
+    <br><br>
+  </div>
 
-<hr>
-<p>©️2024 XMAXCMCIS | XMAXCMCIS.Inc(Not a company) | ver:XMCMCSV2
-<br>
-<br>
-
-<a href="https://github.com/xmaxcmcis">github</a> | <a href="https://www.youtube.com/@XMAXCMCIS">XMAXCMCIS channel</a>
-<br>
-<br>
-<br>
-
-<div id="google_translate_element"></div>
-    <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-        }
-    </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-</body>
-</html>
-
-</div>
-</div>
+  <!-- Google Translate -->
+  <div id="google_translate_element"></div>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  
-  <!-- Project -->
-  <script src="main.js"></script>
-  <style>
-  	.center {
-  		text-align: center ;
-  	}
-  	
-  	body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.welcome-page {
-    position: relative;
-    height: 100%;
-    background: url('https://github.com/xmaxcmcis/XMAXCMCIS.github.io/blob/main/imgaes/images.jpeg') no-repeat center center fixed;
-    background-size: cover;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-}
-
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #;
-}
-
-.logo {
-    width: 150px;
-    height: auto;
-    margin-bottom: 20px;
-}
-
-a {
-	text-decoration: none;
-	color: black;
-	transition: background-color 0.3s ease;
-}
-
-a {
-	text-decoration: none;
-	color: black;
-	transition: color 0.3s ease;
-}
-
-a:hover {
-	color: white;
-}
-a:hover {
-	background-color: black;
-}
-
-  </style>
 </body>
 </html>
-
