--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>XMAXCMCIS</title>
   <!-- 파비콘 링크 -->
-  <link rel="icon" href="https://raw.githubusercontent.com/xmaxcmcis/XMAXCMCIS.github.io/main/images/android-icon-144x144.png" type="image/png">
-  <!-- CSS 및 기타 링크 -->
+  <link rel="icon" href="https://raw.githubusercontent.com/xmaxcmcis/XMAXCMCIS.github.io/main/imgaes/android-icon-144x144.png" type="image/png">
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
+
 <body>
-  <!-- 내용 -->
+  <!-- 중앙 정렬된 링크들 -->
   <div class="center">
     <a href="updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a> | <a href="about.html">about</a>
   </div>
-
   <hr>
+
+  <!-- 페이지 콘텐츠 -->
   <div class="center">
     <h1>who you?</h1>
     <p>I am a developer and create shells and websites. <u>and github dev.</u></p>
@@ -28,18 +32,21 @@
       <button class="btn btn-dark">website</button>
     </a>
     <br><br>
+
     <h1>cdfiles</h1>
     <p>Files Directory</p>
     <a href="">
       <button class="btn btn-dark disabled">download app</button>
     </a>
     <br><br><br>
+
     <h1>ÕAwiki</h1>
     <p>wiki</p>
     <a href="">
       <button class="btn btn-dark disabled">download app</button>
     </a>
     <br><br>
+
     <h1>tercall</h1>
     <p>Making a call based on termux API</p>
     <a href="https://github.com/XMAXCMCIS/tercall-termux">
@@ -47,6 +54,8 @@
     </a>
     <br>
     <hr>
+
+    <!-- GitHub Stats -->
     <div align="center">
       <a href="https://github.com/xmaxcmcis">
         <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="XMAXCMCIS github" />
@@ -54,13 +63,14 @@
     </div>
     <br><br>
     <hr>
+
     <p>©️2024 XMAXCMCIS | XMAXCMCIS.Inc(Not a company) | ver:XMCMCSV2</p>
     <br>
     <a href="https://github.com/xmaxcmcis">github</a> | <a href="https://www.youtube.com/@XMAXCMCIS">XMAXCMCIS channel</a>
     <br><br>
   </div>
 
-  <!-- Google Translate -->
+  <!-- Google 번역기 -->
   <div id="google_translate_element"></div>
   <script type="text/javascript">
     function googleTranslateElementInit() {
@@ -69,7 +79,7 @@
   </script>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-  <!-- Custom Styles -->
+  <!-- 사용자 정의 스타일 -->
   <link rel="stylesheet" href="style.css">
 </body>
 </html>
