--- a/index.html
+++ b/index.html
@@ -6,16 +6,77 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>XMAXCMCIS</title>
-      <link rel="icon" href="/asets/android-icon-144x144.png" type="image/x-icon">
+      <link rel="icon" href="/img/android-icon-144x144.png" type="image/x-icon">
       <!-- 또는 PNG 포맷 사용 -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    
   <!-- HTML -->
-  <div class="center">
-  <a href="updatelog.txt">updatelog.txt</a> | <a href="mailto:wjsdudgo11313@gmail.com">contact</a> | <a href="about.html">about</a>
+  <details>
+    <summary>open meun</summary>
+     <fieldset>
+     <nav>
+       <big>
+         <a href="mailto:wjsdudgo11313@gmail.com">bug send</a>
+         <br>
+         <a href="about.html">show github stats</a>
+         <br>
+          </big>
+         <small>
+         <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>페이지 내 검색</title>
+    <script>
+        function searchWithinPage() {
+            var searchText = document.getElementById('search_text').value;
+            if (window.find && window.getSelection) {
+                document.designMode = "on";
+                var sel = window.getSelection();
+                sel.collapse(document.body, 0);
+                while (window.find(searchText)) {
+                    document.execCommand("HiliteColor", false, "yellow");
+                    sel.collapseToEnd();
+                }
+                document.designMode = "off";
+            } else if (document.body.createTextRange) {
+                var textRange = document.body.createTextRange();
+                while (textRange.findText(searchText)) {
+                    textRange.execCommand("BackColor", false, "yellow");
+                    textRange.collapse(false);
+                }
+            }
+        }
+    </script>
+</head>
+<body>
+    <input type="text" id="search_text">
+    <button onclick="searchWithinPage()"> list finding</button>
+</body>
+</html>
+<br>
+
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+  }
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>
+
+</html>
+
 </div>
+</div>
+         </small>
+     </nav>
+     </fieldset>
+  </details>
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -29,7 +90,7 @@
     <div class="welcome-page">
         <div class="overlay"></div>
         <div class="content">
-            <h1>XMAXCMCIS™
+            <h1>XMAXCMCISFE™
             
         </div>
     </div>
@@ -42,9 +103,9 @@
 	<h1>who you?</h1>
 	<p>I am a developer and create shells and websites.
 	<u>and github dev.</u></p>
-<hr>
-<h1>ÕAtext</h1>
-<p>(Support will end soon)</p>
+<hr><small><h4>MK apps</small>
+<h1>MKlinvks</h1>
+<p>You can check the shell created by the developer. You can copy and run it, and you can also download it. </p>
 	<a href="https://.xmaxcmcis.io/oatext.com/index.html">
 		<button class="btn btn-dark">
 			website
@@ -52,25 +113,16 @@
 </a> 
 <br>
 <br>
-<h1>cdfiles</h1>
-<p>Files Directory</p>
+<h1>MKmyopenwebs</h1>
+<p>Run faster and more conveniently in the app!</p>
 <a href="">
 	<button class="btn btn-dark disabled">
-		download app
+		app download
 	</button>
 </a>
 <br>
 <br>
-<br>
-<h1>ÕAwiki</h1>
-<p>wiki</p>
-<a href="">
-	<button class="btn btn-dark disabled">
-		download app
-	</button>
-</a>
-<br>
-<br>
+<small><h4>FE apps</small>
 <h1>tercall</h1>
 <p>Making a call based on termux API</p>
 <a href="https://github.com/XMAXCMCIS/tercall-termux">
@@ -80,37 +132,19 @@
 </a>
 <br>
 <hr>
-<div align="center">
-  <a href="https://github.com/xmaxcmcis">
-    <img src="https://github-readme-stats.vercel.app/api?username=xmaxcmcis&show_icons=true&theme=radical" alt="XMAXCMCIS github" />
-  </a>
-</div>
+
 <br>
 <br>
 
 <hr>
-<p>©️2024 XMAXCMCIS | XMAXCMCIS.Inc(Not a company) | ver:XMCMCSV2
+<p>©️2024 XMAXCMCIS | DevsCMCISFE.inc | ver:TYPERTSDEVS552.ED
 <br>
 <br>
 
-<a href="https://github.com/xmaxcmcis">github</a> | <a href="https://www.youtube.com/@XMAXCMCIS">XMAXCMCIS channel</a>
+<a href="https://github.com/XMAXCMCISFE">github</a> | <a href="https://www.youtube.com/@XMAXCMCIS">XMAXCMCIS channel</a>
 <br>
 <br>
 <br>
-
-<div id="google_translate_element"></div>
-    <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-        }
-    </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-</body>
-</html>
-
-</div>
-</div>
-
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -183,3 +217,6 @@ a:hover {
 }
 
   </style>
+</body>
+</html>
+
