--- a/login.html
+++ b/login.html
@@ -12,21 +12,8 @@
 </body>
 
 </html>
-
-	<h2>FAQ</h2>
-
-<li>When installing, do you use GitHub? </li>
-<p>We use GitHub for new updates and app installation. </p>
-<li>What versions do you support?</li>
-<p>Android 10 </p>
-<li>shell dev?</li>
-<p>yep shell dev.</p>
-<p>more help us? send email me!
-<br>
-<a href="index.html">
-<button>go back
-</button>
-</a>
+your found it Easter egg!
+<img src="" alt="">
 <style>
 	.cneter {
 		text-align: center;
